--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
+
 body {
-    font-family: 'Madimi One';
+    font-family: 'Madimi One', sans-serif;
     margin: 0;
     padding: 0;
     background: #ffffff;
     color: #e0e0e0;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
@@ -27,7 +28,7 @@ header {
 }
 
 .sidebar, .news {
-    background: #16213e; 
+    background: #16213e;
     padding: 10px;
     border-radius: 8px;
 }
@@ -36,13 +37,7 @@ header {
     width: 20%;
 }
 
-.sidebar h2 {
-    font-size: 20px;
-    color: #e0e0e0;
-}
-
 .sidebar ul {
-    list-style: none;
     padding: 0;
 }
 
@@ -51,9 +46,8 @@ header {
 }
 
 .sidebar ul li a {
+    color: white;
     text-decoration: none;
-    color: #e0e0e0;
-    font-weight: bold;
     transition: color 0.3s;
 }
 
@@ -66,17 +60,46 @@ header {
     background: #0f3460;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+
 }
 
 .content h2 {
-    color: #ffcc29; 
+    color: #ffcc29;
 }
 
-.content img {
-    width: 100%;
+/* Galería de imágenes */
+.imagenes {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.imagenes img {
+    width: 30%;
     border-radius: 5px;
 }
+
+/* Lugares de interés en formato grid */
+.lugares-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.lugares-grid article {
+    text-align: center;
+}
+
+.lugares-grid img {
+    width: 100%;
+    height: 50%;
+    border-radius: 5px;
+}
+
+.lugares-grid p {
+    padding-bottom: 1%;
+}
+
 
 .news {
     width: 25%;
